# orion-variate

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  debug_chinese_encoding  debug_chinese_encoding.rs  dev-plan.md  lcov.info
.github/workflows/: build-and-test.yml  ci.yml  dependencies.yml  release.yml
_gal/: adm.gxl  head.gxl  work.gxl
_gal/mods/: git.gxl  rust.gxl
docs/: coverage-migration.md  net-access-ctrl-guide.md  redirect-rules.md  usage_guide.md
examples/: compress_demo.rs  test_multiline_json.rs
src/: archive.rs  lib.rs  opt.rs  predule.rs  timeout.rs  tools.rs  types.rs  update.rs
src/addr/: constants.rs  error.rs  git.rs  http.rs  local.rs  mod.rs  orion-ops.code-workspace  proxy.rs  types.rs  validation.rs
src/addr/access_ctrl/: README.md  auth.rs  ctrl.rs  mod.rs  serv.rs  unit.rs
src/addr/accessor/: accessor.rs  client.rs  core.rs  creator.rs  git.rs  http.rs  local.rs  mod.rs  retry_utils.rs  timeout.rs  universal.rs
src/addr/proxy/: auth.rs  mod.rs  rule.rs  serv.rs  unit.rs
src/addr/redirect/: auth.rs  mod.rs  rule.rs  serv.rs  unit.rs
src/ext/: artifact.rs  mod.rs  package.rs
src/tpl/: covert.rs  error.rs  export.rs  gtmpl.rs  handlebars.rs  mod.rs
src/tpl/comment/: mod.rs  rust.rs  yml.rs
src/update/: upload_options.rs
src/vars/: collection.rs  constraint.rs  definition.rs  dict.rs  env_eval.rs  error.rs  global.rs  mod.rs  origin.rs  types.rs
src/vars/parse/: base.rs  mod.rs  value.rs
tasks/: 2025-01-14_1_upload-progress-indicator.md  2025-01-15_1_refactor_operation_context.md  2025-06-17_1_fix-chinese-encoding.md  addr-error-refactor-design.md  addr-logging-design.md  download-timeout-control-design.md  redirect-service-env-eval-design.md  resource-uploader-options-design.md
test/data/yml/: _values.yaml  values2.yaml
test/temp/git/x86/: README.md
tests/: git_test.rs  http_test.rs  timeout_test.rs
tests/data/yml/: _values.yaml  case2_in.yml  case2_out.yml  case3_in.yml  case3_out.yml  case4_out.yml  values.yaml
