[package]
name = "orion_variate"
authors = ["wukong<sec-wukong@outlook.com>"]
edition = "2024"
version = "0.10.0"
description = "Variate for Large Project"
license = "MIT"
repository = "https://github.com/galaxy-sec/orion-variate"
keywords = ["variate", "utilities"]
categories = ["config"]

[dependencies]
orion_conf = { git = "https://github.com/galaxy-sec/orion-conf.git", tag = "v0.1.5" }

orion-error = "~0.5"
thiserror = "~2.0"
log = "~0.4"
serde = "~1.0"
serde_yaml = "~0.9"
serde_ini = "~0.2"
winnow = "~0.7"
derive_more = { version = "2.0", features = ["full"] }
os_info = "~3"
serde_derive = "~1.0"
serde_json = "~1.0"
indexmap = { version = "2.11", features = ["serde"] }
derive-getters = "0.5.0"
#futures = "0.3"
#async-stream = "0.3"
#tokio-stream = "0.1"
contracts = "~0.6"
getset = "0.1.6"
#handlebars = "6.3"
#lazy_static = "~1.5"
# env_logger = "~0.11"


#console = "~0.15"
[dev-dependencies]
rstest = "0.26.0"
tempfile = "3.21"
mockito = "1.7"
toml = "~0.9"
