[package]
name = "orion-variate"
authors = ["seeker-zuo<seeker-zuo@outlook.com>"]
edition = "2024"
version = "0.10.4"
description = "Variate for Project"
license = "MIT"
repository = "https://github.com/galaxy-sec/orion-variate"
keywords = ["variate", "utilities"]
categories = ["config"]

[dependencies]

orion-error = "0.5"
orion_conf = { version = "0.3", features = ["yaml","toml"]}
#orion_conf = { path = "../orion-conf", features = ["yaml"]}
thiserror = "2.0"
log = "0.4"
serde = "1.0"
serde_yaml = "0.9"
serde_ini = "0.2"
winnow = "0.7"
derive_more = { version = "2.1", features = ["full"] }
os_info = "3"
serde_derive = "1.0"
serde_json = "1.0"
indexmap = { version = "2.12", features = ["serde"] }
derive-getters = "0.5"
contracts = "0.6"
getset = "0.1"
toml = "0.9"


#console = "~0.15"
[dev-dependencies]
rstest = "0.26"
tempfile = "3.21"
mockito = "1.7"
